I set up my server and connected to the database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://ayowolemieniomosule:Ayowolemi@21@marketplace.iimdtae.mongodb.net/?retryWrites=true&w=majority&appName=marketplace'
